# wurstmapberg

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
assets/: run-wurstmapberg.sh  update_world.sh  wurstmapberg.service  wurstmapberg.timer
crate/extract-colors/: Cargo.toml
crate/extract-colors/src/: main.rs
crate/wurstmapberg-cli/: Cargo.toml
crate/wurstmapberg-cli/src/: colors.rs  main.rs
