[workspace]
members = ["crate/*"]
default-members = ["crate/wurstmapberg-cli"]
resolver = "2"

[workspace.package]
version = "1.21.4"
edition = "2021"

[workspace.lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.flamegraph]
inherits = "release"
debug = true
