[package]
name = "extract-colors"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-tempfile = "0.8"
async_zip = { version = "0.0.18", features = ["full"] }
futures = "0.3"
gix = { version = "0.84", features = ["blocking-http-transport-reqwest-rust-tls-trust-dns"] }
image = { version = "0.25", default-features = false, features = ["rayon", "png"] }
itertools = "0.14"
mcanvil = { git = "https://github.com/wurstmineberg/rust-anvil" }
mimalloc = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["process"] }
tree-sitter = "0.26"
tree-sitter-java = "0.23"
wheel = { git = "https://github.com/fenhl/wheel", features = ["reqwest", "serde_json"] }
