[package]
name = "wurstmapberg-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
collect-mac = "0.1"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["rayon", "png"] }
mcanvil = { git = "https://github.com/wurstmineberg/rust-anvil" }
mimalloc = "0.1"
parking_lot = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
wheel = { git = "https://github.com/fenhl/wheel" }
